# AudioEditor

./: CMakeLists.txt  GITHUB_REPO_LINK.txt  Makefile  PROJECT_REPORT.md  ProjectReport.docx  README.md  pom.xml
docs/: PROJECT_REPORT.md  SETUP.md  TESTING.md
native/: com_meenigam_Utils_callNative.cpp  com_meenigam_Utils_callNative.h  giveVector.cpp  libnative.dylib  main.h
scripts/: build_native.sh  run_all_tests.sh  run_project.sh  test_audio_playback.sh  test_native_library.sh
src/main/java/com/meenigam/: Frame.java  Main.java  Manager.java  PanelFocusAdapter.java
src/main/java/com/meenigam/Components/: Clip.java  DialogBox.java  FileComponent.java  MultiInputDialog.java  Track.java  WavFileCreator.java  WaveformPanel.java  fileComponent.java
src/main/java/com/meenigam/Components/Refs/: AudioPlayer.java
src/main/java/com/meenigam/Components/audio/: AudioPlayer.java
src/main/java/com/meenigam/Panels/: ControlPanel.java  StagingArea.java  TrackEditor.java
src/main/java/com/meenigam/Utils/: PanelFocusAdapter.java  callNative.java
src/main/native/: audio.cpp  waveGenerator.cpp
src/test/java/com/meenigam/acceptance/: TestUserScenarios.java
src/test/java/com/meenigam/integration/: TestAudioPlayback.java  TestJNIIntegration.java
src/test/java/com/meenigam/system/: TestFullWorkflow.java
src/test/java/com/meenigam/unit/: TestAudioPlayer.java  TestCallNative.java  TestClip.java  TestManager.java
src/test/resources/: README.md  test.properties
